--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "freshnesecom",
   "version": "0.1.0",
+  "homepage": "https://kuzivka.github.io/freshnesecom",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -21,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "react-app-rewired build",
+    "deploy": "gh-pages -d build",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-scripts test",
