Add react router

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -6,7 +6,8 @@
       "@styles/*": ["./styles/*"],
       "@store/*": ["./store/*"],
       "@common/*": ["./common/*"],
-      "@selectors": ["./selectors/*"]
+      "@selectors": ["./selectors/*"],
+      "@pages/*": ["./pages/*"]
     }
   }
 }
