--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -7,7 +7,8 @@
       "@reudcers/*": ["./reducers/*"],
       "@common/*": ["./common/*"],
       "@selectors": ["./selectors/*"],
-      "@pages/*": ["./pages/*"]
+      "@pages/*": ["./pages/*"],
+      "@assets/*": ["./assets/*"]
     }
   }
 }
