--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -11,6 +11,7 @@
       "@assets/*": ["./assets/*"],
       "@services/*": ["./services/*"],
       "@utils/*": ["./utils/*"],
+      "@store/*": ["./store/*"],
     }
   }
 }
